--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         app:layout_constraintVertical_bias="0.728" />
 
     <EditText
-        android:id="@+id/insrt_First"
+        android:id="@+id/First_number"
         android:layout_width="200dp"
         android:layout_height="48dp"
         android:hint="first number"
@@ -35,7 +35,7 @@
         app:layout_constraintVertical_bias="0.273" />
 
     <EditText
-        android:id="@+id/insrt_Second"
+        android:id="@+id/Second_number"
         android:layout_width="200dp"
         android:layout_height="48dp"
         android:hint="second number"
@@ -65,7 +65,8 @@
         android:layout_marginStart="176dp"
         android:layout_marginTop="91dp"
         android:layout_marginEnd="177dp"
-        android:text="TextView"
+        android:text="Subtraction Calculator"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
